--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,10 +17,21 @@
         @apply p-3 px-6 text-white bg-main rounded-full hover:bg-[#0d262c];
     } */
     .startedBtn {
-        @apply font-regular text-m cursor-pointer p-3 px-6 text-main border-3 rounded-lg border-[rgb(35,70,79)] hover:scale-105 transition;
+        @apply font-regular text-m cursor-pointer p-3 px-6 text-white border-3 rounded-lg border-[rgb(35,70,79)] hover:scale-105 transition;
+    }
+    .startedBtn1 {
+        @apply font-regular text-m cursor-pointer p-3 px-6 text-black border-3 rounded-lg border-[rgb(35,70,79)] hover:scale-105 transition;
     }
 }
 
+.prevent-select {
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+}
 .bg-main{
     background-color: #23464f;
 }
